--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,37 @@ body *{
   box-sizing: border-box;  
 }
 body{
-  background-color: #508165;
-  margin: 0 auto;
+    background: #2C3E50;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #333, #2C3E50);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #333, #2C3E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    margin: 0 auto;
 }
 html, body{
   height: 100%
 }
 main {
-  background-color:	#DCE1E4;
+  margin-top: 50px;
+  padding: 15px;
+  background-color:	#fff;
   display: flex;
+  height: 100vh;
+  width: 760px;
+  margin-left:auto;
+  margin-right:auto;
+  -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
+  -moz-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
+  box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
+  border-radius: 10px;
   
+}
+
+.inner-content{
+  display: flex;
+  width: 100%;
+  background-color: #DCE1E4;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 footer{
