--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 body *{
-  box-sizing: border-box;  
+  box-sizing: border-box; 
+  font-size: 10px; 
 }
 body{
-    background: #2C3E50;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #333, #2C3E50);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #333, #2C3E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    margin: 0 auto;
+  background: #2C3E50;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #333, #2C3E50);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #333, #2C3E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  margin: 0 auto;
 }
 html, body{
-  height: 100%
+  height: 100%;
+  
 }
 main {
   margin-top: 50px;
@@ -33,12 +34,49 @@ main {
   background-color: #DCE1E4;
   border-radius: 5px;
   padding: 10px;
+  justify-content: center;
 }
-
+article{
+  display: flex;
+  justify-content: center;
+}
 footer{
   display: flex;
+  color: #ccc;
+  justify-content: center;
+  
 
+}
+.footer{
+  font-size: 1.25rem;
+  font-family: 'Open sans'
 }
 .header{
   display: flex;
+  justify-content: center;
+  color: #f5f5f5;
+  
+}
+.header h1{
+  font-size: 4rem;
+  margin-bottom: 0px;
+  font-family: 'Oswald', serif;
+}
+.about{
+  font-size: 1.5rem;
+  font-family: 'Open sans';
+  width: 75%;
+  padding: 5px;
+  color: #333;
+  max-height: 300px
+  
+
+}
+
+.first-word{
+  font-weight: bold;
+  font-size: 2rem;
+  font-family: 'Oswald', sans-serif;
+ 
+
 }
