--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ footer{
   /* flex-direction: column; */
   display: flex;
   justify-content: center;
+  align-items: center
 }
 .about{
   font-size: 1.5rem;
