--- a/src/login.scss
+++ b/src/login.scss
@@ -98,8 +98,9 @@ label {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 300px;
+    height: 100%;
     text-align: center;
+    align-items: center
     
 }
 
