--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ main {
   padding: 15px;
   background-color:	#fff;
   display: flex;
-  width: 760px;
+  max-width: 760px;
   margin-left:auto;
   margin-right:auto;
   -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
@@ -83,22 +83,19 @@ footer{
 .about{
   font-size: 1.5rem;
   font-family: 'Open sans';
-  width: 75%;
+  max-width: 75%;
   padding: 5px;
   color: #333;
-  max-height: 300px;
+  height: 100%;
   /* text-align: justify; */
   /* text-justify: inter-word; */
   
-  
-
 }
 
 .first-word{
   font-weight: bold;
   font-size: 2rem;
-  font-family: 'Oswald', sans-serif;
- 
+  font-family: 'Oswald', sans-serif; 
 
 }
 
@@ -110,12 +107,15 @@ nav{
   margin: 0 auto;
   width: 100%;
   background-color: #222;
+  display: flex;
+  justify-content: center;
 }
 
 nav ul{
   list-style-type: none;
   text-align: center;
-  margin-top: 0
+  margin-top: 0;
+  display: flex;
 }
 
 nav ul li{
@@ -137,3 +137,44 @@ nav ul li a:hover, nav ul li a:active{
   border-bottom: 2px solid #ccc;
   padding-bottom: 8px;
 }
+
+/* MEDIA QUERIES */
+
+@media only screen and (max-width: 600px){
+  .about{
+    font-size: 1rem
+  }
+  .header h1 {
+    font-size: 2rem
+  }
+  main{
+    max-width: 75%;
+  }
+  nav ul li a{
+    font-size: 1rem;
+    padding: 5px
+  }
+} 
+
+@media only screen and (max-width: 400px){
+  .about {
+    font-size: .75rem
+  }
+  .first-word{
+    font-size: 1rem
+  }
+  .header h1 {
+    font-size: 2rem
+  }
+  main{
+    max-width: 75%;
+  }
+  nav ul li a{
+    font-size: rem;
+    padding: 2px
+  }
+
+  nav ul {
+    padding: 10px
+  }
+} 
