--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ main {
   border-radius: 5px;
   padding: 10px;
   justify-content: center;
+  flex-shrink: 1
 }
 article{
   display: flex;
@@ -98,17 +99,37 @@ footer{
   font-family: 'Oswald', sans-serif; 
 
 }
-
+.full-story{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  flex-shrink:1
+}
 .paragraph{
-  max-width: 75%;
+  display: flex;
+  max-width: 100%;
   font-size: 1.05rem;
-  font-family: 'Open sans', serif
+  font-family: 'Open sans', serif;
+  /* flex-wrap: wrap */
+  
 }
 
 .post-add {
   width: 100%;
   display: flex;
   align-items: center;
+  flex-wrap: wrap
+  
+}
+
+.like-sect{
+  display: flex;
+  flex-direction: row;
+  /* justify-content:space-evenly; */
+  align-items: baseline;
+  width: 50%;
+  /* flex-wrap: wrap */
 }
 /* NAV BAR  */
 nav{
@@ -164,6 +185,10 @@ nav ul li a:hover, nav ul li a:active{
   nav ul li a{
     font-size: 1rem;
     padding: 5px
+  }
+  .paragraph{
+    font-size: 12px;
+    width: 100%;
   }
 } 
 
