--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,9 @@ body *{
   font-size: 10px; 
 }
 body{
-  background: #2C3E50;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #333, #2C3E50);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #333, #2C3E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  margin: 0 auto;
   
+  margin: 0 auto;
+  background-color: #F2EECB
   
 }
 html, body{
@@ -26,24 +24,22 @@ html, body{
 }
 main {
   flex: 1;
-  margin-top: 50px;
-  padding: 15px;
-  background-color:	#fff;
+  margin-top: 50px;  
   display: flex;
   max-width: 760px;
   margin-left:auto;
   margin-right:auto;
-  -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
+  /* -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
   -moz-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
   box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
-  border-radius: 10px;
+  */
   
 }
 
 .inner-content{
   display: flex;
   width: 100%;
-  background-color: #DCE1E4;
+  /* background-color: #DCE1E4; */
   border-radius: 5px;
   padding: 10px;
   justify-content: center;
@@ -55,19 +51,18 @@ article{
 }
 footer{
   display: flex;
-  color: #ccc;
+  color: #333;
   justify-content: center;
-  
-
 }
+
 .footer{
-  font-size: 1.25rem;
+  font-size: .75rem;
   font-family: 'Open sans'
 }
 .header{
   display: flex;
   justify-content: center;
-  color: #f5f5f5;
+  color: #2C3E50;
   
 }
 .header h1{
@@ -79,25 +74,29 @@ footer{
   /* flex-direction: column; */
   display: flex;
   justify-content: center;
-  align-items: center
+  /* align-items: center */
 }
 .about{
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-family: 'Open sans';
-  max-width: 75%;
+  max-width: 560px;
   padding: 5px;
   color: #333;
   height: 100%;
-  /* text-align: justify; */
-  /* text-justify: inter-word; */
+  
   
 }
 
 .first-word{
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: 'Oswald', sans-serif; 
 
+}
+
+.title{
+  font-size: 1rem;
+  font-weight: bold;
 }
 .full-story{
   display: flex;
@@ -126,10 +125,9 @@ footer{
 .like-sect{
   display: flex;
   flex-direction: row;
-  /* justify-content:space-evenly; */
   align-items: baseline;
   width: 50%;
-  /* flex-wrap: wrap */
+
 }
 /* NAV BAR  */
 nav{
@@ -138,7 +136,7 @@ nav{
   left: 0px;
   margin: 0 auto;
   width: 100%;
-  background-color: #222;
+  background-color: #2C3E50;
   display: flex;
   justify-content: center;
 }
