--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -1,16 +1,14 @@
-body *{
-  box-sizing: border-box; 
-  font-size: 10px; 
+body * {
+  box-sizing: border-box;
+  font-size: 10px;
 }
-body{
-  
+body {
   margin: 0 auto;
-  background-color: #F5f5f5
-  
+  background-color: #f5f5f5;
 }
-html, body{
-  height: 100vh;  
-  
+html,
+body {
+  height: 100vh;
 }
 
 .Site {
@@ -24,80 +22,75 @@ html, body{
 }
 main {
   flex: 1;
-  margin-top: 50px;  
+  margin-top: 50px;
   display: flex;
   max-width: 760px;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
   /* -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
   -moz-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
   box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.49);
   */
-  
 }
 
-.inner-content{
+.inner-content {
   display: flex;
   width: 100%;
   /* background-color: #DCE1E4; */
   border-radius: 5px;
   padding: 10px;
   justify-content: center;
-  flex-shrink: 1
+  flex-shrink: 1;
 }
-article{
+article {
   display: flex;
   justify-content: center;
 }
-footer{
+footer {
   display: flex;
   color: #333;
   justify-content: center;
 }
 
-.footer{
-  font-size: .75rem;
-  font-family: 'Open sans'
+.footer {
+  font-size: 0.75rem;
+  font-family: "Open sans";
 }
-.header{
+.header {
   display: flex;
   justify-content: center;
-  color: #2C3E50;
-  
+  color: #2c3e50;
 }
-.header h1{
+.header h1 {
   font-size: 4rem;
   margin-bottom: 0px;
-  font-family: 'Oswald', serif;
+  font-family: "Oswald", serif;
 }
-.about-wrap{
+.about-wrap {
   /* flex-direction: column; */
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.about{
+.about {
   font-size: 1rem;
-  font-family: 'Open sans';
+  font-family: "Open sans";
   max-width: 560px;
   padding: 5px;
   color: #333;
   height: 100%;
-  
-  
 }
-.start{
-  display: flex;  
+.start {
+  display: flex;
   text-align: center;
-  margin: 0 auto
-  
+  margin: 0 auto;
 }
-.btn-start{
-  margin-top:25px;
+.btn-start {
+  margin-top: 25px;
   width: 250px;
   height: 40px;
-  background-color:#2C3E50;
+  background-color: #2c3e50;
   color: #f5f5f5;
   display: flex;
   align-items: center;
@@ -105,139 +98,138 @@ footer{
   border-radius: 5px;
   text-decoration: none;
   font-size: 1.5rem;
-  padding: 7px
+  padding: 7px;
 }
 
-
-.first-word{
+.first-word {
   font-weight: bold;
   font-size: 1.5rem;
-  font-family: 'Oswald', sans-serif; 
-
+  font-family: "Oswald", sans-serif;
 }
 
-.title{
+.title {
   font-size: 1rem;
   font-weight: bold;
 }
-.full-story{
+.full-story {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  flex-shrink:1
+  flex-shrink: 1;
 }
-.paragraph{
+.paragraph {
   display: flex;
   max-width: 100%;
   font-size: 1.05rem;
-  font-family: 'Open sans', serif;
+  font-family: "Open sans", serif;
   /* flex-wrap: wrap */
-  
 }
 
 .post-add {
   width: 100%;
   display: flex;
   align-items: center;
-  flex-wrap: wrap
-  
+  flex-wrap: wrap;
 }
 
-.like-sect{
+.like-sect {
   display: flex;
   flex-direction: row;
   align-items: baseline;
   width: 50%;
-
 }
 /* NAV BAR  */
-nav{
+nav {
   /* position: fixed; */
   top: 0px;
   left: 0px;
   margin: 0 auto;
   width: 100%;
-  background-color: #2C3E50;
+  background-color: #2c3e50;
   display: flex;
   justify-content: center;
 }
 
-nav ul{
+nav ul {
   list-style-type: none;
   text-align: center;
   margin-top: 0;
   display: flex;
 }
 
-nav ul li{
+nav ul li {
   display: inline-block;
   text-align: center;
   padding: 20px;
   height: 2%;
 }
 
-nav ul li a{
+nav ul li a {
   text-decoration: none;
   color: white;
   padding: 20px;
-  font-size: 1.25rem
+  font-size: 1.25rem;
 }
 
 /* an underline appears at the bottom on hover of each link */
-nav ul li a:hover, nav ul li a:active{
+nav ul li a:hover,
+nav ul li a:active {
   border-bottom: 2px solid #ccc;
   padding-bottom: 8px;
 }
 
-.logout-btn{
+.logout-btn {
   text-decoration: none;
   color: white;
-  background-color:#2C3E50;
+  background-color: #2c3e50;
   font-size: 1.25rem;
-  border:none;
-  
+  border: none;
 }
-.logout-btn:hover{
+.logout-btn:hover {
   border-bottom: 2px solid #ccc;
   padding-bottom: 8px;
-  
 }
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 600px){
-  .about{
-    font-size: 1rem
+@media only screen and (max-width: 600px) {
+  .about {
+    font-size: 1rem;
   }
   .header h1 {
-    font-size: 2rem
+    font-size: 2rem;
   }
-  main{
+  main {
     max-width: 75%;
   }
-  nav ul li a{
+  nav ul li a {
     font-size: 1rem;
-    padding: 5px
+    padding: 5px;
   }
-  .paragraph{
+  .paragraph {
     font-size: 12px;
     width: 100%;
   }
-} 
+}
 
 /* New Passage Box */
-.passage-entry{
-  width: 100%;
+.passage-box {
+  display: flex;
+  justify-content: space-evenly;
+}
+.passage-entry {
+  display: flex;
+  min-width: 600px;
   height: 100px;
   margin-top: 10px;
   border-radius: 5px;
   border: 1px solid rgb(192, 186, 194);
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 1rem;
-  padding-left: 10px
+  padding-left: 10px;
 }
-.add-pass{
-  background-color: #2C3E50;
+.add-pass {
+  background-color: #2c3e50;
   max-width: 150px;
   height: 30px;
   padding: 5px;
@@ -246,35 +238,32 @@ nav ul li a:hover, nav ul li a:active{
   align-items: center;
   justify-content: center;
   border-radius: 5px;
-  
-  
 }
 /* Open+Sans|Oswald */
-.add-pass a{
+.add-pass a {
   color: #fff;
   font-size: 1rem;
   text-decoration: none;
-  
 }
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 400px) {
   .about {
-    font-size: .75rem
+    font-size: 0.75rem;
   }
-  .first-word{
-    font-size: 1rem
+  .first-word {
+    font-size: 1rem;
   }
   .header h1 {
-    font-size: 2rem
+    font-size: 2rem;
   }
-  main{
+  main {
     max-width: 75%;
   }
-  nav ul li a{
+  nav ul li a {
     font-size: rem;
-    padding: 2px
+    padding: 2px;
   }
 
   nav ul {
-    padding: 10px
+    padding: 10px;
   }
-} 
+}
